# discord-bot-rust

./: .gitignore  Cargo.toml  Procfile
docs/UML/: discordbot-usecase  discordbot-usecase.drawio.html
src/: main.rs
src/config/: development.toml  settings.rs
src/constants/: channel_ids.rs  messages.rs
