[package]
name = "discord_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
config = "0.12.0"
serde = "1.0.8"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
]
version = "0.10"